testsuite/positive/Issue-0947.n
using System;
using System.Console;

public variant X 
{
  | A {
    public class T1 {}
  }
  public class T2 {}
}

module Program
{
  Main() : void
  {
    WriteLine(X.A.T1());
    WriteLine(X.T2());
  }
}
/*
BEGIN-OUTPUT
X+A+T1
X+T2
END-OUTPUT
*/