testsuite/negative/namespace-b231_2.n
using Syyyyyyyyyyyyystem; // E: referenced namespace .* does not exist

class A
{
  x : DateTime; // E: unbound type name `DateTime'
}

public module Program
{
    Main() : void
    {
    }
}
